# handwriting-generator

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
handwriting_generator/: __init__.py  __main__.py  cli.py  fonts.py  hand.py  ingest.py  jitter.py  layout.py  paper.py  render.py  template.py
tests/: conftest.py  test_cli.py  test_hand.py  test_layout.py  test_render.py
