[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "handwriting-generator"
version = "0.2.0"
description = "Render text as a natural-looking handwriting PNG — using a handwriting-style font, or your OWN handwriting captured from a printed template. Fully offline (no ML, no network)."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "smolkai", email = "smolkai@users.noreply.github.com" }]
keywords = ["handwriting", "font", "png", "image", "text-to-image", "pillow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Processing :: Fonts",
]
dependencies = ["Pillow>=9.1.0", "numpy>=1.21"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
handwriting-generator = "handwriting_generator.cli:run"
handwrite = "handwriting_generator.cli:run"

[project.urls]
Homepage = "https://github.com/smolkapps/handwriting-generator"

[tool.setuptools]
packages = ["handwriting_generator"]

[tool.setuptools.package-data]
handwriting_generator = ["fonts/*.ttf", "fonts/OFL.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
